# kcat

./: .gitignore  ChangeLog  INSTALL  Makefile  Makefile.in  README  aclocal.m4  configure  configure.ac
autom4te.cache/: output.0  traces.0  traces.1
cat_doc/: AntLoading.gnumeric  InterfaceSpec.txt  NRAMdata.txt  startup.txt
data/: KC505.desktop  kachina.xpm  kcat.desktop
data/mac/: kachina.icns  kcat.icns
data/win32/: fl_app.nsi  kcat.rc
doxygen/: make_docs.sh  make_prog_docs.sh  make_user_docs.sh
doxygen/images/: ._kcatlogo.tiff  AntPort-force.eps  AntennaControl.eps  AntennaPorts.eps  CW-extra.eps  CW.eps  OSC.eps  RX.eps  RegressionAnalysis.eps  Serial-port-select.eps  TX.eps  VOX.eps  configure-cw-keyboard.eps  cw-keyboard.eps  fldigi-kcat.eps  frequency-controls-2.eps  frequency-controls.eps  kcat-colors.eps  kcat.eps  kcatlogo.eps  kcatlogo.tiff  open-extra.eps  sliders.eps  speech.eps  text_menu.eps  ugly-colors.eps  utils_menu.eps  vfo-buttons.eps  vfo-list.eps
doxygen/user_src_doc/: ._AntPortsDialog.txt  ._kcat_exras.txt  AntPortsDialog.txt  Doxyfile  cw_keyboard_page.txt  index.txt  kcat_exras.txt
kcat-help/: AntPortsDialog.html  FreqCalDialog.html  cw_keyboard.html  index.html  kcat-extras.html
m4/: build.m4  fltk.m4  funcs.m4  np-compat.m4  pkg-config.m4  xmlrpc.m4
scripts/: build4mingw.sh  builddist.sh  buildmxe.sh  config4mingw.sh  make4mingw.sh  mkappbundle.sh  mknsisinst.sh
src/: Fl_SigBar.cpp  Fl_SigBar.cxx  FreqControl.cpp  FreqControl.cxx  IOspec.cpp  IOspec.cxx  Kachina.cpp  KachinaPanel.cxx  KachinaPanel.fl  Kachina_io.cpp  Makefile  Makefile.am  Makefile.in  XYplot.cxx  config.h  config.h.in  cppfiles  cstack.cpp  debug.cxx  dialogs.cpp  dialogs.cxx  flinput2.cxx  icons.cxx  images.cxx  kachina.rc  kcat.rc  kcat_io.cxx  kcat_panel.cxx  kcat_panel.fl  main.cxx  serialcomm.cpp  serialcomm.cxx  status.cxx  support.cpp  support.cxx  telemetry.cpp  xml_io.cxx  xmlrpc_log.cxx
src/UI/: dialogs.cxx  kcat_icon.cxx  kcat_panel.cxx  kcat_panel.fl
src/images/: alc.xbm  dbm.xbm  fwd.xbm  kcat.xpm  mvolts.xbm  p120.xbm  p15.xbm  p150.xbm  p30.xbm  p45.xbm  p60.xbm  p75.xbm  p90.xbm  rev.xbm  smeter.xbm  swr.xbm
src/include/: Fl_SigBar.h  FreqControl.h  IOspec.h  Kachina.h  KachinaPanel.h  Kachina_io.h  XYplot.h  compat-mingw.h  compat.h  cstack.h  date.h  flinput2.h  icons.h  images.h  includes.txt  kcat.h  kcat_io.h  kcat_panel.h  linserial.h  serialcomm.h  status.h  support.h  test.h  threads.h  version.h  winserial.h  xml_io.h
src/support/: IOspec.cxx  debug.cxx  font_browser.cxx  images.cxx  kcat_io.cxx  serialcomm.cxx  support.cxx  timeops.cxx  xml_io.cxx  xmlrpc_log.cxx
src/widgets/: Fl_SigBar.cxx  XYplot.cxx  flinput2.cxx
src/xmlrpcpp/: XmlRpcServerConnection.cpp  XmlRpcUtil.cpp
